Fix so tags on mentors wrap instead of going through the mentor description text.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -13,6 +13,9 @@ img.avatar-medium {
 	height: 48px;
 }
 
+.mentor-label {
+	display: inline-block;
+}
 
 
 
